--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.atguigu.shoppingmall">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <!-- Required  一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -31,17 +31,19 @@
         android:supportsRtl="true"
         android:name=".app.MyAppliction"
         android:theme="@style/AppTheme">
-        <activity android:name=".app.MainActivity" android:launchMode="singleTask">
+        <activity android:name=".app.WelcomeActivity" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.MainActivity" />
         <activity android:name=".app.GoodsInfoActivity" />
         <activity android:name=".home.activity.GoodsListActivity"/>
         <activity android:name=".shoppingcart.activity.ShoppingCartActivity"/>
         <activity android:name=".app.LoginActivity"/>
+        <activity android:name=".app.RegisterActivity"/>
         <activity android:name=".user.activity.MessageCenterActivity"/>
         <activity android:name=".app.CallCenterActivity"/>
     </application>
